2003-02-04  Nathan Fisher <natbobc@users.sf.net>

	* mingwfaq.shtml: Add CSS and HTML 4.01 compliant tags.

2003-02-04  Nathan Fisher <natbobc@users.sf.net>

	* mingwfaq.shtml: Converted tabs to '  '.
	Add missing hr.

2003-02-04  Nathan Fisher <natbobc@users.sf.net>

	* mingwfaq.shtml: Correct the href.
	Thanks to James Wilson (fat_hot at users sf net)
	
2003-02-04  Nathan Fisher <natbobc@users.sf.net>

	* mingwfaq.shtml: Cleaned up formatting.
	Removed duplicate named anchors.
	Changed reporting bugs section to link to bugs.shtml.
	
2003-02-04  Nathan Fisher <natbobc@users.sf.net>

	* links.shtml, mingw-oldfaq.shtml: Merged all of the IDE
	and Editors section as well as the other compiler section.
	
2003-02-04  Nathan Fisher <natbobc@users.sf.net>

	* download.shtml: Added named anchor for the release info.
	* mingwfaq.shtml: Changed "What is the current version?" 
	link so it points to download.shtml#download-release.
	Removed most of the "What is the current..." section.

2003-02-04  Nathan Fisher <natbobc@users.sf.net>

	* links.shtml, mingw-oldfaq.shtml: Merging information from 
	mingw-oldfaq.shtml.

2003-02-03  Earnie Boyd  <earnie@users.sf.net>

	* mingwfaq.shtml (MinGW-2.0.0-3.exe): Correct the href typo.
	Thanks to Myers Carpenter (myers_carpenter at users sf net).

2003-02-02  Nathan Fisher  <natbobc@users.sf.net>

	* downloads.shtml: Updated Installation process.

2003-02-02  Earnie Boyd  <earnie@users.sf.net>

	* ssi/release.html: Add iconv 1.8 snapshot.

2003-01-31  Earnie Boyd  <earnie@users.sf.net>

	* ssi/release.html: Add bison 1.875 snapshot.

2003-01-27  Earnie Boyd  <earnie@users.sf.net>

	* ssi/release.html: Add recent MSYS and Source Navigator snapshot
	releases.
	* links.shtml: Correct the list type for the list of IDE's.

2003-01-26  Earnie Boyd  <earnie@users.sf.net>

	* news-short.html: Remove from cvs as this file is dynamically created.
	* links.shtml, mingwfaq.shtml, mingw-oldfaq.shtml: Merging information