@@ -17,8 +17,8 @@
 <h4>Package Upgrades</h4>
 <ul>
 	<li>Binutils: <a href="http://prdownloads.sf.net/mingw/binutils-2.13.90-20021006-2.tar.gz" target="_nw">binutils-2.13.90-20021006-2.tar.gz</a></li>
-	<li>W32api: <a href="http://prdownloads.sf.net/mingw/w32api-2.1.tar.gz" target="_nw">w32api-2.1.tar.gz</a></li>
-	<li>MinGW Runtime: <a href="http://prdownloads.sf.net/mingw/mingw-runtime-2.3.tar.gz" target="_nw">mingw-runtime-2.3.tar.gz</a></li>
+	<li>W32api: <a href="http://prdownloads.sf.net/mingw/w32api-2.2.tar.gz" target="_nw">w32api-2.2.tar.gz</a></li>
+	<li>MinGW Runtime: <a href="http://prdownloads.sf.net/mingw/mingw-runtime-2.4.tar.gz" target="_nw">mingw-runtime-2.4.tar.gz</a></li>
 </ul>
 
 
@@ -28,7 +28,7 @@
  <li>Debugger: <a
  href="http://prdownloads.sf.net/mingw/gdb-5.2.1-20021009.tar.gz" target="_nw">gdb-5.2.1-20021009.tar.gz</a></li>
  <li>Java: <a href="http://prdownloads.sf.net/mingw/gcj-3.2-20021210-1.tar.gz" target="_nw">gcj-3.2-20021210-1.tar.gz</a></li>
- <li>GCC: <a href="http://prdownloads.sf.net/mingw/gcc-3.2.1-core-20021201-2.tar.gz" target="_nw">gcc-3.2.1-core-20021201-2.tar.gz</a></li>
+ <li>GCC: <a href="http://prdownloads.sf.net/mingw/gcc-3.2.2-20030208-1.tar.gz" target="_nw">gcc-3.2.2-20030208-1.tar.gz</a></li>
  <li>Binutils: <a href="http://prdownloads.sf.net/mingw/binutils-2.13.90-20030104-1.tar.gz" target="_nw">binutils-2.13.90-20030104-1.tar.gz</a></li>
 </ul>
 
