@@ -1,3 +1,7 @@
+2003-02-10  Earnie Boyd  <earnie@users.sf.net>
+
+	* ssi/release.html: Modify versions for mingw-runtime, w32api and GCC.
+
 2003-02-04  Nathan Fisher <natbobc@users.sf.net>
 
 	* mingwfaq.shtml: Add CSS and HTML 4.01 compliant tags.
